--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[安装nvm管理多版本Node](https://github.com/creationix/nvm)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "mock": "json-server -p 3000 --host 192.168.1.47 --routes ./mock/routes.json  ./mock/data.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,6 @@
   },
   "homepage": "https://github.com/wovert/mock-tutorials#readme",
   "dependencies": {
-    "json-server": "^0.14.2",
     "mockjs": "^1.0.1-beta3"
   }
 }
